--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     },
     "homepage": "https://github.com/kcomas/qi#readme",
     "devDependencies": {
+        "@types/react": "^17.0.3",
+        "@types/react-dom": "^17.0.2",
         "html-webpack-plugin": "^5.3.1",
         "prettier": "^2.2.1",
         "ts-loader": "^8.0.18",
@@ -36,5 +38,10 @@
         "webpack": "^5.25.0",
         "webpack-cli": "^4.5.0",
         "webpack-dev-server": "^3.11.2"
+    },
+    "dependencies": {
+        "@material-ui/core": "^4.11.3",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1"
     }
 }
